# Unimak_Saha_Takip

./: .gitignore  DEPLOYMENT_RENDER.md  DESKTOP_SETUP.md  release-tag.ps1  render.yaml
.github/workflows/: ci.yml  release-desktop.yml  release-mobile.yml
backend/: .env.example  alembic.ini  database.py  excel_archive.py  main.py  models.py  requirements.txt  schemas.py  unimak_saha.db
backend/alembic/: env.py
backend/alembic/versions/: 20260420_0001_auth_rbac_base.py  20260422_0002_app_policy.py  20260423_0003_system_controls_table.py
backend/auth/: deps.py  security.py
backend/scripts/: cleanup_orphan_uploads.py  migrate_photo_paths.py  safe_purge_system.py  seed_demo_data.py  seed_roles.py  smoke_rbac.py
backend/tests/: test_security.py
frontend/: .env.example  package-lock.json  package.json  vite.config.js
frontend/scripts/: run-tauri.mjs
frontend/src/: App.css  App.jsx  config.js  index.css  main.jsx  theme.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/src/api/: http.js  localCache.js  patchFetch.js  writeQueue.js
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: UnimakConfirmModal.jsx  UnimakToast.jsx
frontend/src/hooks/: useUnimakToast.js
frontend/src/pages/: ChecklistManagement.jsx  Dashboard.jsx  FabrikaBakim.jsx  GecmisProjeler.jsx  KPIDashboard.jsx  Login.jsx  PanoTakip.jsx  ProjectGallery.jsx  ProjectOpsCenter.jsx  (+3 more)
mobile_app/: README.md  pubspec.yaml
mobile_app/lib/: main.dart
mobile_app/test/: widget_test.dart
(+23 files in other folders)
